# Slingshot

./: .env.example  .gitignore  README.md  debug_funding.py  debug_ghost_engine.py  docker-compose.yml  error_log.txt  launch.bat  middleware.ts  out.txt  out2.txt  package-lock.json  package.json  parse_err.txt  parse_err_utf8.txt  requirements.txt  run_engine.py  start.ps1  tailwind.config.ts  test_pipeline.py  test_pipeline_ascii.py  test_signal.py  tmp_git_audit.py  tmp_signals.json  tsconfig.tsbuildinfo
app/: globals.css  (+2 more)
engine/: examine_data.py  main_router.py  pyproject.toml  strategy.py  test_ws.py
engine/api/: advisor.py  advisor_bridge.py  auth.py  config.py  json_utils.py  main.py  registry.py  signal_handler.py  supabase_client.py  ws_manager.py
engine/backtest/: replay_engine.py
engine/core/: __init__.py  confluence.py  forensics.py  logger.py  oracle.py  session_manager.py  store.py
engine/data/: ai_cache.json  binance_stream.py  cache.py  cc_stream.py  economic_calendar.json  fetcher.py  ingestion.py  macro_state.json  mock_stream.py
engine/execution/: binance_executor.py  bitunix_bridge.py  delta_executor.py  ftmo_bridge.py  nexus.py  omega_listener.py
engine/filters/: risk.py  time_filter.py
engine/indicators/: data_utils.py  fibonacci.py  ghost_data.py  htf_analyzer.py  liquidations.py  liquidity.py  macro.py  market_analyzer.py  momentum.py  onchain.py  onchain_provider.py  regime.py  sessions.py  smt.py  structure.py  volume.py
engine/inference/: backbone_bridge.c  bridge_loader.py  compile_bridge.ps1  stress_test.py  volume_pattern.py
(+177 files in other folders)
