[project]
name = "slingshot-engine"
version = "0.1.0"
description = "Core Engine for Slingshot Gen 1 - Financial Signal Analysis"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "onnxruntime>=1.18.0",
    "pandas>=2.2.0",
    "pandas-ta>=0.3.14b",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "scipy>=1.17.0",
    "pyarrow>=23.0.1",
    "xgboost>=3.2.0",
    "scikit-learn>=1.8.0",
    "fastparquet>=2025.12.0",
]
